--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,26 @@
 {
+  "name": "SUDHAUS7/sudhaus7-viewhelpers",
+  "description": "(Sudhaus7) Viewhelpers and other basics",
+  "version": "1.0.0",
+  "type": "typo3-cms-extension",
+  "license": "",
+  "authors": [
+    {
+      "name": "Frank Berger",
+      "role": "Developer"
+    },
+    {
+      "name": "Markus Hofmann",
+      "role": "Developer"
+    }
+  ],
+  "replace": {
+    "sudhaus7_viewhelpers": "self.version",
+    "bfactor_viewhelpers": "self.version"
+  },
+  "require": {
+    "typo3/cms-core": ">=6.2,<8.0"
+  },
   "autoload": {
     "psr-4": {
       "SUDHAUS7\\Sudhaus7Viewhelpers\\": "Classes/"
