--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,12 @@
   "require": {
     "typo3/cms-core": ">=6.2,<8.0"
   },
+
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0.x-dev"
+    }
+  },
   "autoload": {
     "psr-4": {
       "SUDHAUS7\\Sudhaus7Viewhelpers\\": "Classes/"
